# christ-cli

./: Cargo.toml  install.sh
.github/workflows/: release.yml
Formula/: christ-cli.rb
npm/: install.js  package.json
src/: app.rs  cli.rs  main.rs  update.rs
src/api/: bolls.rs  mod.rs  types.rs
src/store/: cache.rs
src/ui/: browser.rs  theme.rs
